Code clean-up, add small test case